...
        android:padding="8dp">


        <com.google.android.exoplayer2.ui.SimpleExoPlayerView
            android:layout_width="match_parent"
            android:layout_height="@dimen/exo_player_height_port"
            android:id="@+id/exo_player_view"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/step_detail_iv"
            android:layout_gravity="left"
...
