...
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:text="Steps (tap for more details)"
                android:layout_below="@id/ingredients_rv" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recipe_steps_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/step_detail_title_tv" />

            <Button
                android:layout_width="match_parent"
...
